feat: add breadcrumbs to password screens